packages/forge-dsl/fixtures/errors/e25-bad-knot-header.fable
// expect: FORGE106
-> go

=== ===
Nameless place.
-> END

=== go ===
Onward.
-> END
